CI do not test vTPM on v9.1
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/git_issue_12/tasks/03_a_machine_type_uefi_vtpm.yml
+++ b/tests/integration/targets/git_issue_12/tasks/03_a_machine_type_uefi_vtpm.yml
@@ -1,9 +1,5 @@
+# machine_type: vTPM+UEFI is supported
 # ----------------------------------Job-----------------------------------------------------------------------------
-
-#- name: Try make source vm - UEFI without nvram.
-
-# TODO: vTPM+UEFI machine type is not yet supported on this API version.
-# TODO: Uncomment when VTPM is implemented.
 - name: Make source vm - vTPM+UEFI
   scale_computing.hypercore.vm:
     vm_name: XLAB-test-machine-type-vTPM+UEFI
