--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -351,77 +351,19 @@ jobs:
       - integ-seq-matrix
       - integ-run
     if: "(!cancelled()) && (needs.integ-seq-matrix.result=='success')"
-    runs-on: [ self-hosted2 ]
-    container: quay.io/justinc1_github/scale_ci_integ:9
-    env:
-      DEBIAN_FRONTEND: noninteractive
-    defaults:
-      run:
-        working-directory: ${{ env.WORKDIR }}
     strategy:
       fail-fast: false
-      # The max number of concurent jobs
-      max-parallel: 1
       matrix:
-        test_name: ${{ fromJson(needs.integ-seq-matrix.outputs.matrix) }}
-        # "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^role_version_update_single_node$|^utils_login$|^certificate$"
-        # Some tests can be tested on VSNS - those are run on VSNS.
-        # Some cannot, those are run on test cluster 10.5.11.50.
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
           - https://10.5.11.203
           - https://10.5.11.204
-        exclude:
-          # role cluster_config can be used with HC3 9.1, but you need to omit cluster_name setting.
-          # CI job role_cluster_config does try to set cluster_name, so it would fail.
-          - sc_host: https://10.5.11.200
-            test_name: role_cluster_config
-        # include:  # change later to use env.INTEG_TESTS_TO_RUN_SEQUENTIALLY
-        #   - sc_host: https://10.5.11.50
-        #     test_name: dns_config
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          path: ${{ env.WORKDIR }}
-      - name: SKIP test if it succeeded before
-        shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          X_GITHUB_JOB_NAME: "integ-seq-run (${{ matrix.test_name }}, ${{ matrix.sc_host }})"
-        run: |
-          if ! .github/job_retry_needed.py
-          then
-            echo SKIP test, job retry not needed
-            echo 'X_GITHUB_SKIP_TEST=1' >> $GITHUB_ENV
-          else
-            echo 'X_GITHUB_SKIP_TEST=0' >> $GITHUB_ENV
-          fi
-      - name: Install prerequisites
-        # We have ansible.cfg "for testing" in git repo
-        # (it is excluded in galaxy.yml, so it is not part of collection artifact)
-        # But it does affect ansible-galaxy and ansible-test commands.
-        shell: bash
-        run: |
-          [ "$X_GITHUB_SKIP_TEST" == "1" ] && exit 0
-          pip install ansible-core~=2.16.0
-          ansible-galaxy collection install community.crypto
-          ansible-galaxy collection list
-      # ${{ env.WORKDIR }} cannot be used in "uses:"
-      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
-        with:
-          sc_host: ${{ matrix.sc_host }}
-          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
-          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
-          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
-          oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
-          working_directory: ${{ env.WORKDIR }}
-      - name: Run test
-        shell: bash
-        run: |
-          [ "$X_GITHUB_SKIP_TEST" == "1" ] && exit 0
-          ansible-test integration --local ${{ matrix.test_name }}
+    secrets: inherit
+    uses: ./.github/workflows/z_ansible-test.yml
+    with:
+      sc_host: ${{ matrix.sc_host }}
+      test_names: ${{ needs.integ-seq-matrix.outputs.matrix }}
 
   replica_cleanup:
     needs: []
