--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,7 @@
 stdout_callback     = community.general.yaml
 retry_files_enabled = False
 forks               = 16
-collections_paths = ../../../
+collections_path = ../../../
 # To test the inventory file: hypercore_inventory.yml
 #[inventory]
 #enable_plugins = scale_computing.hypercore.hypercore
