CI fix iso integration test
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/iso/tasks/main.yml
+++ b/tests/integration/targets/iso/tasks/main.yml
@@ -46,7 +46,7 @@
       register: result
     - ansible.builtin.assert:
         that:
-          - "{{result.records.0.ready_for_insert}} is true"
+          - result.records.0.ready_for_insert is true
 
 
     - name: Upload ISO image ci-upload-iso-integration.iso to HyperCore API (test idempotence)
