CI test template2vm role, and small fixes
Role default values for optional params were missing.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/roles/template2vm/defaults/main.yml
+++ b/roles/template2vm/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+template2vm_user_data: ""
+template2vm_meta_data: ""
 template2vm_nics:
   - type: virtio
     vlan: 0
+template2vm_wait_vm_boot_tasks_dummy_param: ""
