CI fix retry failed job
Actual job names are like
'integ-seq-run (https://10.5.11.201) / ansible-test (utils_login)'
Code was searching for job with name like
'integ-seq-run (https://10.5.11.201), ansible-test (utils_login)'

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/z_ansible-test.yml
+++ b/.github/workflows/z_ansible-test.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          X_GITHUB_JOB_NAME: "${{ inputs.outer_job_name }} (${{ inputs.sc_host }}), ansible-test (${{ matrix.test_name }})"
+          X_GITHUB_JOB_NAME: "${{ inputs.outer_job_name }} (${{ inputs.sc_host }}) / ansible-test (${{ matrix.test_name }})"
         run: |
           echo DBG X_GITHUB_JOB_NAME=$X_GITHUB_JOB_NAME
           echo DBG inputs.outer_job_name=${{ inputs.outer_job_name }}
