--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,7 +1,7 @@
 ---
 namespace: scale_computing
 name: hypercore
-version: 1.5.0
+version: 1.6.0-dev
 readme: README.md
 authors:
   - XLAB Steampunk <steampunk@xlab.si>
